--- a/footer.html
+++ b/footer.html
@@ -13,8 +13,8 @@
 </head>
 <body>
     <footer>
-        <div class="container-fluid">
-            <div class="row footer justify-content-between align-items-center ">
+        <div class="container-fluid rodape">
+            <div class="row footer justify-content-between align-items-center caixa">
                 <div class="col-sm-12 col-md-3 redes p-3">
                     
                     <a href="https://www.facebook.com/Passatempoedu/" class="btn rede" role= "button" aria-pressed="true">
