--- a/navbar.html
+++ b/navbar.html
@@ -15,22 +15,25 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-md fixed-top">
+    <nav class="navbar navbar-expand-md fixed-top border border-danger">
       <div class="container-fluid">
+        <div>
+          <img src="Image/Logo Passatempo.png" class="home_logo ">
+        </div>
         <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler-icon "></span>
         </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+        <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
           <div class="offcanvas-header">
             <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
             <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>  
           <div class="offcanvas-body">
-            <ul class="navbar-nav justify-content-between flex-grow-1">
+            <ul class="navbar-nav justify-content-around flex-grow-1">
               <li class="nav-item text-top ">
                 <a class="nav-link " aria-current="page" href="menu.html">Home</a>
               </li>
-              <li class="nav-item">
+              <li class="nav-item ">
                 <a class="nav-link" href="oficinas.html">Oficinas</a>
               </li>
               <li class="nav-item">
