--- a/oficinas.html
+++ b/oficinas.html
@@ -5,7 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Oficinas</title>
-    <link rel="stylesheet" href="style_oficina.css">
+    <link rel="stylesheet" href="CSS/style_oficina.css">
+    <link rel="stylesheet" href="CSS/style_navbar.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
@@ -20,22 +22,25 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-md fixed-top">
-          <div class="container-fluid">
+        <nav class="navbar navbar-expand-md fixed-top ">
+          <div class="container-fluid  ">
+            <div>
+              <img src="Image/Logo Passatempo.png" class="home_logo ">
+            </div>
             <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
+              <span class="navbar-toggler-icon "></span>
             </button>
-            <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+            <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
               <div class="offcanvas-header">
                 <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
                 <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
               </div>  
               <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-between flex-grow-1">
+                <ul class="navbar-nav justify-content-around flex-grow-1">
                   <li class="nav-item text-top ">
                     <a class="nav-link " aria-current="page" href="menu.html">Home</a>
                   </li>
-                  <li class="nav-item">
+                  <li class="nav-item ">
                     <a class="nav-link" href="oficinas.html">Oficinas</a>
                   </li>
                   <li class="nav-item">
@@ -59,7 +64,6 @@
           </div>
         </nav>
       </header>
-
       <!-- espaçamento -->
        
     <br>
@@ -75,7 +79,7 @@
                 <h1 class="titulo">OFICINAS</h1>
             </div>
             <div class="col-auto">
-                <img src="imagens/Logo_Passatempo (1).png" alt="logo" class="img-fluid" style="max-height: 100px;">
+                <img src="Image/Logo Passatempo.png" alt="logo" class="img-fluid" style="max-height: 100px;">
             </div>
         </div>
      </div>
