--- a/saudeBemEstar.html
+++ b/saudeBemEstar.html
@@ -9,64 +9,75 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/style_bem_estar.css">
+
+    <!-- fonte guy -->
     <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
+
+    <!-- fonte ubuntu -->
     <link
         href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
-    <header class="header">
-        <nav class="navbar navbar-expand-md fixed-top">
-            <div class="container-fluid">
-                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas"
-                    data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar"
-                    aria-labelledby="offcanvasNavbarLabel">
-                    <div class="offcanvas-header">
-                        <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
-                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                    </div>
-                    <div class="offcanvas-body">
-                        <ul class="navbar-nav justify-content-between flex-grow-1">
-                            <li class="nav-item text-top ">
-                                <a class="nav-link " aria-current="page" href="menu.html">Home</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="oficinas.html">Oficinas</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="eventos.html">Eventos Sociais</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="eventos.html">Eventos Corporativos</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="contato.html">Contato</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="adm.html">Admin</a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
+
+
+    <header>
+        <nav class="navbar navbar-expand-md fixed-top ">
+          <div class="container-fluid  ">
+            <div>
+              <img src="Image/Logo Passatempo.png" class="home_logo ">
             </div>
+            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon "></span>
+            </button>
+            <div class="offcanvas offcanvas-end justify-content-start" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+              <div class="offcanvas-header">
+                <h2 class="offcanvas-title" id="offcanvasNavbarLabel">Menu</h2>
+                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+              </div>  
+              <div class="offcanvas-body">
+                <ul class="navbar-nav justify-content-around flex-grow-1">
+                  <li class="nav-item text-top ">
+                    <a class="nav-link " aria-current="page" href="menu.html">Home</a>
+                  </li>
+                  <li class="nav-item ">
+                    <a class="nav-link" href="oficinas.html">Oficinas</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="eventos.html">Eventos Sociais</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="eventos.html">Eventos Corporativos</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="saudeBemEstar.html">Saude e Bem-Estar</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="contato.html">Contato</a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="adm.html">Admin</a>
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
         </nav>
-    </header>
+      </header>
 
     <br>
     <br>
-    
+    <br>
+    <br>
+    <br>
+    <br>
 
-
+    <!-- conteudo da página -->
+    <br>
     <div class="container-fluid p-0" id="principal">
 
-        <div class="col-xlg-12">
+        <div class="col-xlg-12 border border-danger">
             <div class="row col-xlg-12 d-flex justify-content-between p-5">
                 <div class="col-md-4 p-0" id="saude_col">
                     <div class="saude" id="texto0">Saúde e bem estar</div>
@@ -116,8 +127,8 @@
         <br>
 
         <div class="row col-xlg-12 d-flex p-5" id="container_amarelo">
-            <div class="col-xlg-12 d-flex justify-content-between">
-                <div class="col-md-4">
+            <div class="col-xlg-12 d-flex justify-content-between align-items-center">
+                <div class="col-md-4 border border danger">
                     <h1 id="texto3">
                         Estação Fitness
                         <p id="texto4">
@@ -150,6 +161,7 @@
         
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <body>
 
